<resources>
    <string name="app_name">MurkOff Care</string>
    <string name="app_description">Welcome to Murkoff Care - The best health application in Viet Nam</string>
    <string name="enter_phone_number_here">Enter phone number here</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="send_otp_code">Send OTP Code</string>
    <string name="i_didn_t_receive_otp_code">Didn\'t receive OTP code ? </string>
    <string name="murkoff_corporation">MURKOFF CORPORATION</string>
    <string name="login_with_phone_number">Login with phone number</string>
    <string name="vietnam_phone_prefix">+84</string>
    <string name="get_authorization_code">Get Authorization Code</string>
    <string name="do_not_let_phone_number_empty">Do not let phone number empty</string>
    <string name="only_enter_number_except_first_zero">Only enter number except first zero</string>
    <string name="check_your_internet_connection">Check Your Internet Connection</string>
    <string name="login_by_github">Login By Github</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="notification">Notification</string>
    <string name="personality">Personality</string>
    <string name="service">Service</string>
    <string name="speciality">Speciality</string>
    <string name="doctor">Doctor</string>
    <string name="default_datetime">2024-12-22 10:02:43</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="add_account_info_successfully">Add Account Info Successfully</string>
    <string name="cancel">Cancel</string>
    <string name="icon">Icon</string>
    <string name="popular_specialities">Popular Specialities</string>
    <string name="read_more">Read More</string>
    <string name="handbook">Handbook</string>
    <string name="recommended_pages">Recommended Pages</string>
    <string name="popular_doctors">Popular Doctors</string>
    <string name="co_xuong_khop">Cơ Xương Khớp</string>
    <string name="default_datetime2">Date: 30-10-2024</string>
    <string name="default_speciality">General</string>
    <string name="default_doctor_name">Doctor Duy Phạm</string>
    <string name="default_reason">Periodic health examination</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="at">At</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="loading">Loading</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="attention">Attention</string>
    <string name="oops_there_is_an_issue">Oops there is an issue</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="login_failed">Login Failed</string>
    <string name="empty_phone_number_or_verificationId">Empty Phone Number Or VerificationId</string>
    <string name="your_health_our_business">Your Health, Our Business</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="code_sent">Code Sent</string>
    <string name="invalid_verification_code">Invalid Verification Code</string>
    <string name="empty_verification_code">Empty Verification Code</string>
    <string name="verification_id_not_found">Verification Id Not Found</string>
    <string name="upload">Upload</string>
    <string name="health_insurance_number">Health Insurance Number</string>
    <string name="your_health_insurance_number">Your Health Insurance Number</string>
    <string name="email">Email</string>
    <string name="email_example">example@gmail.com</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="gender">Gender</string>
    <string name="code_male">1</string>
    <string name="code_female">0</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="patientBirthday">Birthday</string>
    <string name="your_birthday">Your Birthday</string>
    <string name="patientAddress">Address</string>
    <string name="your_address">Your Address</string>
    <string name="create_at">Create At</string>
    <string name="update_at">Update At</string>
    <string name="save">Save</string>
    <string name="click_on_your_avatar_to_select_new_photo">Click On Your Avatar To Select New Photo</string>
    <string name="successful_action">Successful Action</string>
    <string name="default_personal_name">Duy Phạm</string>
    <string name="about_us">About Us</string>
    <string name="appointment_history">Appointment History</string>
    <string name="booking_history">Booking History</string>
    <string name="reminder">Reminder</string>
    <string name="personal_information">Personal Information</string>
    <string name="appearance">Appearance</string>
    <string name="email_us">Email Us</string>
    <string name="guide">Guide</string>
    <string name="exit">Exit</string>
    <string name="language">Language</string>
    <string name="image">Image</string>
    <string name="done">Done</string>
    <string name="processing">Processing</string>
    <string name="default_room">Khu A, tầng 1, phòng 102</string>
    <string name="default_position">Number of your examination: 1</string>
    <string name="remind_me">Remind Me</string>
    <string name="your_position">Number of your examination:</string>
    <string name="your_reason">Your reason:</string>
    <string name="you_will_get_notification_as_soon_as_your_turn">You will receive a notification when it\'s your turn</string>
    <string name="notifications">Notifications</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="murkoff_care_is_running_in_background">MurkOff Care is running in background</string>
    <string name="it_is_your_turn">It is your turn. Be ready !</string>
    <string name="appointment_information">Appointment Information</string>
    <string name="default_location">Area A, 1st floor, room 112</string>
    <string name="appointment_queue">Appointment Queue</string>
    <string name="numericalOrder">Ordinal number of visits</string>
    <string name="patientName2">Patient name</string>
    <string name="patient_numerical_order">Patient numerical order</string>
    <string name="my_birthday">30-10-2024</string>
    <string name="bookingPhone2">Booking personal phone</string>
    <string name="my_phone_number">0123456789</string>
    <string name="patientReason">Patient reason</string>
    <string name="appointmentDate2">Appointment date</string>
    <string name="default_date">15-12-2024</string>
    <string name="appointmentTime2">Appointment time</string>
    <string name="default_time">9:00</string>
    <string name="appointmentStatus">Appointment\'s status</string>
    <string name="watch_medical_record">Watch Medical Record</string>
    <string name="watch_medical_treatment">Watch Medical Treatment</string>
    <string name="you_can_read_again_in_settings"><![CDATA[You can go to Personal -> Medical History to review the information later]]></string>
    <string name="default_service_name">Xét nghiệm công thức máu toàn phần (CBC - Complete Blood Count)</string>
    <string name="default_booking_name">Booking name: Phạm Bạch An Duy</string>
    <string name="default_booking_phone">Booking patient: 0899.255.255</string>
    <string name="default_patient_name">Patient name: Phạm Bạch An Duy</string>
    <string name="bookingName2">Booking personal name</string>
    <string name="booking">Booking</string>
    <string name="free_booking_fee">Free booking fee</string>
    <string name="bookingStatus">Schedule status</string>
    <string name="my_address">Đường 69, Phường Linh Trung, Thành phố Thủ Đức</string>
    <string name="photo">Photo</string>
    <string name="note_5">By confirming your booking, you fully agree to our Terms of Service.</string>
    <string name="note_7">These photos below are photos that you have been uploaded. To remove unexpected photo, swipe from the right.</string>
    <string name="dark_mode">Dark mode</string>
    <string name="set_time">Set time</string>
    <string name="message">Message</string>
    <string name="vibrate">Vibrate</string>
    <string name="schedule">Schedule</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_about_that">Are you sure about that?</string>
    <string name="title">Title</string>
    <string name="description2">Description</string>
    <string name="content">Content</string>
    <string name="next">Next</string>
    <string name="you_are_missing_mandatory_field">You are missing mandatory field !</string>
    <string name="thank_you_for_using_our_service">Thank you for using our application. To continue, click on Send button, we will contact you as soon as possible !</string>
    <string name="send">Send</string>
    <string name="select_application_to_send">Select application to send email</string>
    <string name="open_with_google_map">Open with google map</string>
    <string name="medical_examination_guide">Guide to medical examination</string>
    <string name="medical_examination_procedures">Check-up procedure</string>
    <string name="note_medical"><![CDATA[Below are guidelines and procedures for customers who book through MurkOff Care]]></string>
    <string name="note_medical_1"><![CDATA[1. You go to Children\'s Hospital 2,  14 Road Ly Tu Trong, Phuong Ben Nghe, District 1, Ho Chi Minh City]]></string>
    <string name="attention_patient">Patients note</string>
    <string name="note_attention_1">
        <b>Note about MEASLES</b>
        \n * When visiting, patients need to check their temperature as soon as they enter the door
        \n * In case testing is required, the inpatient and family members will take care of the patient
    </string>
    <string name="note_attention_2">
        <b>Note that patients need to bring identification documents when going to the doctor</b>
         \n * Health insurance card
         \n * Life/non-life insurance card
         \n * Identity card for adults. Birth certificate for children
    </string>
    <string name="murkoff_care_support_call_center">Murkoff Care Support Call Center</string>
    <string name="murkoff_care_phone_number">0899.255.255 - 034.888.888 (6h to 22h)</string>
    <string name="my_phone_num">123456789</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="all_rights_reserved_by_murkoff">All Rights Reserved By MurkOff</string>
    <string name="none">None</string>
    <string name="type">Type</string>
    <string name="times">Times</string>
    <string name="purpose">Purpose</string>
    <string name="instruction">Instruction</string>
    <string name="repeat">Repeat</string>
    <string name="time">Time</string>
    <string name="default_treatment_name">Name: Thực phẩm bổ sung MurkOffBoost</string>
    <string name="default_treatment_repeat_days">Repeat: daily</string>
    <string name="default_treatment_repeat_time">Time: 10:00 AM</string>
    <string name="default_treatment_type">Type: Uống</string>
    <string name="default_treatment_times">Times: 9</string>
    <string name="default_treatment_purpose">Purpose: Bổ sung Vitamin</string>
    <string name="default_treatment_instruction">Instruction: Uống trước khi ăn và trước đi ngủ 2 viên/lần</string>
    <string name="medical_record_information">Medical Record Information</string>
    <string name="appointment_reason">Appoitment reason</string>
    <string name="statusBefore">Condition before treatment</string>
</resources>