<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmPage.AlarmPageFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_above="@id/btnConfirm"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true" >



        <LinearLayout
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorBackground"
                    android:src="@drawable/ic_arrow_back"
                    android:contentDescription="@string/image" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/image"
                    android:src="@drawable/murkoff_banner" />

            </LinearLayout><!-- end LOGO -->

            <!-- TIME -->
            <LinearLayout
                android:id="@+id/lytTime"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:id="@+id/txtTimeValue"
                    android:gravity="start|center"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorThemeBlueNavy"
                    android:text="@string/default_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTimepicker"
                    android:text="@string/set_time"
                    android:layout_width="100dp"
                    android:layout_gravity="end|center"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style_info"
                    android:textColor="@drawable/button_style_text_color_state"/>
            </LinearLayout><!-- end TIME -->


            <!-- MESSAGE -->
            <TextView
                android:textSize="12sp"
                android:textColor="@color/textColorBlack"
                android:paddingVertical="5dp"
                android:text="@string/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input_style_booking"
                android:drawablePadding="10dp"
                android:hint="@string/message"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:textSize="11sp"
                android:importantForAutofill="no" />
            <!-- end MESSAGE -->

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <!-- VIBRATE -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:gravity="start|center"
                    android:textColor="@color/textColorBlack"
                    android:paddingVertical="5dp"
                    android:text="@string/vibrate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbxVibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <!-- end VIBRATE -->

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <!-- REPEATING WEEKDAY -->
            <TextView
                android:textSize="12sp"
                android:textColor="@color/textColorBlack"
                android:paddingVertical="5dp"
                android:text="@string/schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbxMonday"
                android:text="@string/monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbxTuesday"
                android:text="@string/tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbxWednesday"
                android:text="@string/wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbxSaturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbxThursday"
                android:text="@string/thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbxFriday"
                android:text="@string/friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbxSunday"
                android:text="@string/sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <!-- end REPEATING WEEKDAY -->

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        style="@style/button_style_info"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:text="@string/confirm" />

</RelativeLayout>