<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/loginbackground"
    tools:context=".LoginPage.EnterOTPActivity">

    <!--MURKOFF LOGO-->
    <ImageView
        android:id="@+id/muroff_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/murkoff_logo"
        android:layout_gravity="center"/>

    <!--MURKOFF SLOGAN-->
    <LinearLayout
        android:id="@+id/murkoff_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/murkoff_corporation"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your World, Our Business"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <!-- INPUT VERIFICATION -->
    <EditText
        android:id="@+id/editOTP"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:drawablePadding="20dp"
        android:autofillHints=""
        android:background="@drawable/input_style"
        android:drawableStart="@drawable/ic_key"
        android:hint="@string/enter_otp_code"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:paddingHorizontal="20dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        tools:ignore="SmallSp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendOTPCode"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:text="@string/send_otp_code"
        android:layout_gravity="center"
        android:textAllCaps="false"
        style="@style/button_style_info"/>

    <TextView
        android:id="@+id/tvSendOTPAgain"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/textColorWhite"
        android:layout_gravity="center"
        android:text="@string/i_didn_t_receive_otp_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>